--- a/src/components/feed/messagesender/MessageSender__top.css
+++ b/src/components/feed/messagesender/MessageSender__top.css
@@ -21,4 +21,9 @@ input {
   outline-width: 0;
   display: flex;
   flex: 1;
+  border-radius: 99px;
+}
+
+.messageSender__top form button {
+  display: none;
 }
