--- a/src/components/feed/post/Post.css
+++ b/src/components/feed/post/Post.css
@@ -1,5 +1,5 @@
 .post {
-  width: 100%;
+  width: 700px;
   margin-top: 15px;
   background-color: #fff;
   border-radius: 15px;
@@ -14,7 +14,10 @@
 }
 
 .post__image img {
-  width: 100%;
+  position: relative;
+  left: 20px;
+  max-width: 700px;
+  max-height: 500px;
   border-radius: 0 0 15px 15px;
 }
 
